Next to do testing loop

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4AyNDYnBOGUtVkQGODGvk",
+      "authorship_tag": "ABX9TyOm2/hybujRunwHyAUIFwfc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wYM_wWYlqyAS",
-        "outputId": "c292b14f-797c-417b-8180-ccbc949dab11"
+        "outputId": "eb12c511-a3a9-4999-a457-d797477b45a2"
       },
       "outputs": [
         {
@@ -50,7 +50,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ],
       "source": [
@@ -81,25 +81,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
         "id": "ei9U7HCGryHA",
-        "outputId": "c227f882-8f90-4c15-98a7-b8eba5ef94ba"
+        "outputId": "c49b01fd-6c60-477e-d279-6627c840e7b9"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2.5.1+cu124'"
+              "'2.6.0+cu124'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -150,9 +150,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c_2Tml6ztJtU",
-        "outputId": "1a7d19a2-98ff-4793-8ebd-d701caf89661"
+        "outputId": "dc09c5b6-4442-42dc-81d0-b61943cd1a34"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +181,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -207,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F7iXQBYJ0eG9",
-        "outputId": "fafeb6c5-0046-4d43-fb1a-304f7e1efe64"
+        "outputId": "0532222d-4066-4122-e0c1-074478c7498a"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -240,9 +240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZNxsgTQ30hot",
-        "outputId": "d72a6136-124a-4a89-cc19-400dc8471c9b"
+        "outputId": "eda0198c-512b-49d8-8d23-c438103f83c2"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +252,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -266,9 +266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "47QJCh2j1Ngc",
-        "outputId": "555ba516-4f66-4508-9316-dca6e0e0f2cb"
+        "outputId": "382ae63b-2134-4e8b-9604-41306c969257"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,7 +357,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "gxG6oeh51d22"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -421,9 +421,9 @@
           "height": 599
         },
         "id": "6AXwAosk3yY7",
-        "outputId": "4437bcae-7e18-4ba9-8947-99a726d9d3b9"
+        "outputId": "3030a04c-6f4b-4b2d-8668-2fd2d7c33e8d"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -482,7 +482,7 @@
       "metadata": {
         "id": "6YmXDNH1tX78"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -537,9 +537,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7sk35OMIK7ED",
-        "outputId": "63d2bf02-c618-4087-be4e-729aaf0bdd76"
+        "outputId": "ae6a336b-c82b-43b3-bcc8-28c8a90c5030"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +552,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 10
         }
       ]
     },
@@ -567,9 +567,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qjzCn4JyL03R",
-        "outputId": "c64fb57f-43eb-4364-97cd-daf8111ce2e4"
+        "outputId": "db83a99a-0785-4b1a-f75e-d72ca127a94c"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -579,7 +579,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 11
         }
       ]
     },
@@ -593,9 +593,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cNWtdUI1NcA9",
-        "outputId": "92b49d5c-55e8-4ffb-f331-121bcc60b1cb"
+        "outputId": "7e6c6605-3f58-4c29-9207-d4c3906cbc40"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -605,7 +605,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 12
         }
       ]
     },
@@ -632,9 +632,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P-Q1lQuCOqP0",
-        "outputId": "325d7498-33fb-4375-c4fe-adb0e7ca84a2"
+        "outputId": "b23c9b20-e37b-4397-c0ad-96464bf6082d"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -663,7 +663,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 13
         }
       ]
     },
@@ -684,9 +684,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A-SfimRFOh7l",
-        "outputId": "46ec9908-8d17-47bb-c2a4-5b9573932228"
+        "outputId": "7d5c19ca-7504-44b9-866d-59e965cfc8e9"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +705,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 14
         }
       ]
     },
@@ -719,9 +719,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "psK2YBBqP0Ox",
-        "outputId": "551b8765-08c0-42b3-cdd8-dbef3f3ca725"
+        "outputId": "2aa1b71c-b0f0-4def-9240-7f992f8410bd"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -740,7 +740,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 15
         }
       ]
     },
@@ -755,9 +755,9 @@
           "height": 599
         },
         "id": "Zq6Apx7YP2HS",
-        "outputId": "2c4d34a6-51f2-452c-e265-cd55c09ba1cf"
+        "outputId": "a3957b3a-b861-4d55-c9d4-8d6956091d2d"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -809,9 +809,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DGPJRASrSbYO",
-        "outputId": "423420a2-c7ce-4ab7-dcf8-c3acf5b739f9"
+        "outputId": "06d0b653-aad6-479a-ff43-d290a3765ca2"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -824,14 +824,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 17
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Check out our model's parameters (a parameter is a valie that the model sets itself)\n",
+        "# Check out our model's parameters (a parameter is a value that the model sets itself)\n",
         "model_0.state_dict()"
       ],
       "metadata": {
@@ -839,9 +839,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9hMoW7UYSfRZ",
-        "outputId": "4dfe0ed7-30db-445d-9b6d-826db6257646"
+        "outputId": "c0146e07-2763-45ff-c20e-cb5deeab28b3"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,7 +851,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 18
         }
       ]
     },
@@ -867,7 +867,7 @@
       "metadata": {
         "id": "cEDHKE5DVMXl"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -893,6 +893,9 @@
         "# An epoch is one loop through the data...(this is a hyperparameter because we've set it ourselves)\n",
         "epochs=1\n",
         "\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "\n",
         "### Training\n",
         "# 0. Loop through the data\n",
         "for epoch in range(epochs):\n",
@@ -902,14 +905,14 @@
         "  # 1. Forward pass\n",
         "  y_pred=model_0(X_train)\n",
         "\n",
-        "  # 2. Calculate the loss\n",
+        "  # 2. Calculate the loss->how wrong the model's predictions are\n",
         "  loss=loss_fn(y_pred, y_train)\n",
         "\n",
-        "  # 3. Optimizer zero grad\n",
+        "  # 3. Optimizer zero grad->the gradients that the optimizer calculates later accumulate so we have to zero them each time\n",
         "  optimizer.zero_grad()\n",
         "\n",
         "  # 4. Perform backpropagation on the loss with respect to the parameters of the model\n",
-        "  loss.backward()\n",
+        "  loss.backward() #we compute the gradient for each parameter with require_grad=true\n",
         "\n",
         "  # 5. Step the optimizer (perform gradient descent)\n",
         "  optimizer.step() # by default how the optimizer changes will accumulate through the loop so.. we have to zero them above in step 3 for the next iteration of the loop\n",
@@ -920,8 +923,17 @@
       "metadata": {
         "id": "NbEhhUVfXh_F"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Arrivato a 6:56:30"
+      ],
+      "metadata": {
+        "id": "_LMUVARd4Lxy"
+      }
     }
   ]
 }
