--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMAlGRiTrcJ8y69EJZJrUcd",
+      "authorship_tag": "ABX9TyNf3Zs4ve5wRBJ0BT7RmTWB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +88,7 @@
         "id": "ei9U7HCGryHA",
         "outputId": "d8753ed4-b7b5-44c7-a88a-72f2d94a4a69"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
         "id": "c_2Tml6ztJtU",
         "outputId": "180f1b8b-6ce3-4ce3-ba6e-98014df4aaab"
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +211,7 @@
         "id": "F7iXQBYJ0eG9",
         "outputId": "760d9385-1d37-430d-8935-92a860e27fb1"
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -244,7 +244,7 @@
         "id": "ZNxsgTQ30hot",
         "outputId": "18b6a2bd-35e1-4701-982f-0b07bf63770b"
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
         "id": "47QJCh2j1Ngc",
         "outputId": "8de36cbd-89f4-48f3-ceb5-145d59ad4a55"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +409,7 @@
       "metadata": {
         "id": "gxG6oeh51d22"
       },
-      "execution_count": 225,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +425,7 @@
         "id": "6AXwAosk3yY7",
         "outputId": "6bb22797-4f76-4feb-96d9-56e5eecef011"
       },
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -484,7 +484,7 @@
       "metadata": {
         "id": "6YmXDNH1tX78"
       },
-      "execution_count": 227,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
         "id": "7sk35OMIK7ED",
         "outputId": "ad2c144a-632e-4faf-a78d-c38431771acb"
       },
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +571,7 @@
         "id": "qjzCn4JyL03R",
         "outputId": "55d9f401-0fb1-41bc-b847-f84f1f0a9df6"
       },
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
         "id": "cNWtdUI1NcA9",
         "outputId": "6c5616ac-8b7a-4542-db81-4b8ea62a0425"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
         "id": "P-Q1lQuCOqP0",
         "outputId": "21550e44-61cb-48fb-b2b8-1d388771781c"
       },
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,7 +688,7 @@
         "id": "A-SfimRFOh7l",
         "outputId": "eac597f8-725b-48c7-a971-0a5d3f355f9d"
       },
-      "execution_count": 232,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -723,7 +723,7 @@
         "id": "psK2YBBqP0Ox",
         "outputId": "cccd4e08-2d26-433c-b8bd-2051d8dcb71e"
       },
-      "execution_count": 233,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -759,7 +759,7 @@
         "id": "Zq6Apx7YP2HS",
         "outputId": "a1a8d1b8-d15f-4541-c795-7add27f0a557"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -813,7 +813,7 @@
         "id": "DGPJRASrSbYO",
         "outputId": "3d653dd3-2c0d-42a3-98f8-24dca3ae83f6"
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -843,7 +843,7 @@
         "id": "9hMoW7UYSfRZ",
         "outputId": "5d5e159c-204d-4025-b448-f06fb18d4773"
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -869,7 +869,7 @@
       "metadata": {
         "id": "cEDHKE5DVMXl"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -952,7 +952,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1003,7 +1003,7 @@
           "height": 472
         }
       },
-      "execution_count": 245,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1038,7 +1038,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,7 +1064,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 240,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1087,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1111,7 +1111,7 @@
           "height": 462
         }
       },
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1138,7 +1138,7 @@
           "height": 462
         }
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1151,6 +1151,48 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Saving a model in PyTorch\n",
+        "\n",
+        "There are three main methods you should about for saving and loading models in PyTorch.\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.   torch.save() - allows you to save a PyTorch object in Python's pickle format\n",
+        "2.   torch.load() - allows you to load a saved PyTorch object.\n",
+        "3.   torch.nn.Module.load_state_dict() - this allows to load a model's saved state dictionary\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "IJM4JA2l7Jdi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Saving our PyTorch model\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# 1. Create models directory\n",
+        "MODEL_PATH= Path(\"models\")\n",
+        "MODEL_PATH.mkdir(parents=True,exist_ok=True)\n",
+        "\n",
+        "\n",
+        "# 2. Create model save path\n",
+        "MODEL_NAME=\"\""
+      ],
+      "metadata": {
+        "id": "kOyWGFC08tHB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
