store,load,load_state_dict()

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNf3Zs4ve5wRBJ0BT7RmTWB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wYM_wWYlqyAS",
-        "outputId": "8a5dede1-4212-4900-e2c4-1671c19225d7"
+        "outputId": "9bc94207-0070-4fff-fc17-4c7949128325"
       },
       "outputs": [
         {
@@ -52,7 +51,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 219
+          "execution_count": 3
         }
       ],
       "source": [
@@ -83,10 +82,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         },
         "id": "ei9U7HCGryHA",
-        "outputId": "d8753ed4-b7b5-44c7-a88a-72f2d94a4a69"
+        "outputId": "6e7f12d1-7e14-42ab-ac1b-e38506180d90"
       },
       "execution_count": null,
       "outputs": [
@@ -94,14 +93,14 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2.6.0+cu124'"
+              "'2.8.0+cu126'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 220
+          "execution_count": 4
         }
       ]
     },
@@ -152,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c_2Tml6ztJtU",
-        "outputId": "180f1b8b-6ce3-4ce3-ba6e-98014df4aaab"
+        "outputId": "2b530a99-2236-4ed5-8301-c150894fb382"
       },
       "execution_count": null,
       "outputs": [
@@ -183,7 +182,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 221
+          "execution_count": 5
         }
       ]
     },
@@ -209,7 +208,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F7iXQBYJ0eG9",
-        "outputId": "760d9385-1d37-430d-8935-92a860e27fb1"
+        "outputId": "1cc236d3-c6b9-4e81-dc13-213a9f431d81"
       },
       "execution_count": null,
       "outputs": [
@@ -221,7 +220,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 222
+          "execution_count": 6
         }
       ]
     },
@@ -242,7 +241,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZNxsgTQ30hot",
-        "outputId": "18b6a2bd-35e1-4701-982f-0b07bf63770b"
+        "outputId": "d1cf375a-ddac-4f09-a6e0-5fc8bf8721d1"
       },
       "execution_count": null,
       "outputs": [
@@ -254,7 +253,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 223
+          "execution_count": 7
         }
       ]
     },
@@ -268,7 +267,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "47QJCh2j1Ngc",
-        "outputId": "8de36cbd-89f4-48f3-ceb5-145d59ad4a55"
+        "outputId": "6f560eb9-04a7-4270-8551-450a1081dc8e"
       },
       "execution_count": null,
       "outputs": [
@@ -359,7 +358,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 224
+          "execution_count": 8
         }
       ]
     },
@@ -420,10 +419,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 462
+          "height": 455
         },
         "id": "6AXwAosk3yY7",
-        "outputId": "6bb22797-4f76-4feb-96d9-56e5eecef011"
+        "outputId": "c3dca44d-a5fb-4c4f-f069-34f61435095a"
       },
       "execution_count": null,
       "outputs": [
@@ -539,7 +538,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7sk35OMIK7ED",
-        "outputId": "ad2c144a-632e-4faf-a78d-c38431771acb"
+        "outputId": "de2ade64-de60-43fe-c199-07b9d527f6d9"
       },
       "execution_count": null,
       "outputs": [
@@ -554,7 +553,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 228
+          "execution_count": 12
         }
       ]
     },
@@ -569,7 +568,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qjzCn4JyL03R",
-        "outputId": "55d9f401-0fb1-41bc-b847-f84f1f0a9df6"
+        "outputId": "1957de60-cded-4092-b91a-fcfbd33b006a"
       },
       "execution_count": null,
       "outputs": [
@@ -581,7 +580,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 229
+          "execution_count": 13
         }
       ]
     },
@@ -595,7 +594,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cNWtdUI1NcA9",
-        "outputId": "6c5616ac-8b7a-4542-db81-4b8ea62a0425"
+        "outputId": "bf1e16ac-34bc-4e99-c0fd-2c004155cd43"
       },
       "execution_count": null,
       "outputs": [
@@ -607,7 +606,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 230
+          "execution_count": 14
         }
       ]
     },
@@ -634,7 +633,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P-Q1lQuCOqP0",
-        "outputId": "21550e44-61cb-48fb-b2b8-1d388771781c"
+        "outputId": "1b649add-fa97-41e9-eaee-c6f6e57987f2"
       },
       "execution_count": null,
       "outputs": [
@@ -665,7 +664,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 231
+          "execution_count": 15
         }
       ]
     },
@@ -686,7 +685,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A-SfimRFOh7l",
-        "outputId": "eac597f8-725b-48c7-a971-0a5d3f355f9d"
+        "outputId": "06988c78-279d-4f4e-f282-1df331b822cc"
       },
       "execution_count": null,
       "outputs": [
@@ -707,7 +706,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 232
+          "execution_count": 16
         }
       ]
     },
@@ -721,7 +720,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "psK2YBBqP0Ox",
-        "outputId": "cccd4e08-2d26-433c-b8bd-2051d8dcb71e"
+        "outputId": "e61017ec-b848-4aa6-d0f0-76e8bffec41f"
       },
       "execution_count": null,
       "outputs": [
@@ -742,7 +741,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 233
+          "execution_count": 17
         }
       ]
     },
@@ -754,10 +753,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 462
+          "height": 455
         },
         "id": "Zq6Apx7YP2HS",
-        "outputId": "a1a8d1b8-d15f-4541-c795-7add27f0a557"
+        "outputId": "467c94b1-bc98-47ed-887c-089163b24ad3"
       },
       "execution_count": null,
       "outputs": [
@@ -811,7 +810,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DGPJRASrSbYO",
-        "outputId": "3d653dd3-2c0d-42a3-98f8-24dca3ae83f6"
+        "outputId": "d94076fc-1157-45ca-c38c-020b65ea1fb3"
       },
       "execution_count": null,
       "outputs": [
@@ -826,7 +825,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 235
+          "execution_count": 19
         }
       ]
     },
@@ -841,7 +840,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9hMoW7UYSfRZ",
-        "outputId": "5d5e159c-204d-4025-b448-f06fb18d4773"
+        "outputId": "fb32bf81-ac1a-43b3-d499-43d172058e0d"
       },
       "execution_count": null,
       "outputs": [
@@ -853,7 +852,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 236
+          "execution_count": 20
         }
       ]
     },
@@ -947,7 +946,7 @@
       ],
       "metadata": {
         "id": "NbEhhUVfXh_F",
-        "outputId": "6cc31458-2177-42e2-f56c-da5cd979a035",
+        "outputId": "16a33fcd-e3f1-48cd-f68f-1022f5bb6a25",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -997,14 +996,23 @@
       ],
       "metadata": {
         "id": "DkWxGDF--9St",
-        "outputId": "b2f3871f-cbb9-4d86-e9d6-4122d9c8a75b",
+        "outputId": "1f7748ad-24bc-4064-dabe-7fe63cb61706",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 472
+          "height": 544
         }
       },
       "execution_count": null,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-3749488743.py:3: UserWarning: Converting a tensor with requires_grad=True to a scalar may lead to unexpected behavior.\n",
+            "Consider using tensor.detach() first. (Triggered internally at /pytorch/torch/csrc/autograd/generated/python_variable_methods.cpp:835.)\n",
+            "  plt.plot(epoch_count,np.array(torch.tensor(loss_values).numpy()),label=\"Train loss\")\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -1033,7 +1041,7 @@
       ],
       "metadata": {
         "id": "0z8J_YuT0RnE",
-        "outputId": "a1ec88ad-6d44-46d9-d522-a8fb9bacd11a",
+        "outputId": "570303b1-4a50-43b2-ab2c-cd5ca1523b23",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1059,7 +1067,7 @@
       ],
       "metadata": {
         "id": "kGA7ESkF0DZp",
-        "outputId": "266bb3eb-2996-4984-9fc2-7d01c44cfb5a",
+        "outputId": "c1859030-1598-46d8-efb3-7401a53ac048",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1082,7 +1090,7 @@
       ],
       "metadata": {
         "id": "imxC7tPr9-un",
-        "outputId": "3a730a4f-27fe-4517-bada-54b888b4d776",
+        "outputId": "33d1b5c2-a347-4ed2-906a-f1dda4f66f66",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1093,7 +1101,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "OrderedDict([('weights', tensor([0.6990])), ('bias', tensor([0.3093]))])\n"
+            "OrderedDict({'weights': tensor([0.6990]), 'bias': tensor([0.3093])})\n"
           ]
         }
       ]
@@ -1105,10 +1113,10 @@
       ],
       "metadata": {
         "id": "jK3myAeI855f",
-        "outputId": "b83ce60e-bd58-4869-d72d-61827ba4eef8",
+        "outputId": "af2651b3-f1f0-4ff2-b3ec-c12fa5f5cea2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 462
+          "height": 455
         }
       },
       "execution_count": null,
@@ -1132,10 +1140,10 @@
       ],
       "metadata": {
         "id": "aCQl9PpE9FkN",
-        "outputId": "fd3147be-0903-41e2-f838-81d811d52dd6",
+        "outputId": "4a7261bd-1775-467d-ed43-0dbcbe228652",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 462
+          "height": 455
         }
       },
       "execution_count": null,
@@ -1186,13 +1194,231 @@
         "\n",
         "\n",
         "# 2. Create model save path\n",
-        "MODEL_NAME=\"\""
+        "MODEL_NAME=\"01_pytorch_workflow_model_0.pth\"\n",
+        "MODEL_SAVE_PATH=MODEL_PATH/MODEL_NAME\n",
+        "\n",
+        "\n",
+        "#3. Save the model state dict\n",
+        "print(f\"Saving model to: {MODEL_SAVE_PATH}\")\n",
+        "torch.save(obj=model_0.state_dict(),f=MODEL_SAVE_PATH)"
       ],
       "metadata": {
-        "id": "kOyWGFC08tHB"
+        "id": "kOyWGFC08tHB",
+        "outputId": "151f08fe-5492-4149-fc34-b9cb35b44545",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving model to: models/01_pytorch_workflow_model_0.pth\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -l models"
+      ],
+      "metadata": {
+        "id": "W-IQ50RWYzoC",
+        "outputId": "76b11f7a-cf2e-4337-ede3-11ce2bef8e60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 4\n",
+            "-rw-r--r-- 1 root root 2117 Oct 16 14:18 01_pytorch_workflow_model_0.pth\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Loading a PyTorch model\n",
+        "\n",
+        "#to load in a saved state_dict we have to instantiate a new instance of our model class\n",
+        "loaded_model_0=LinearRegressionModel()\n",
+        "\n",
+        "# Load the saved state_dict of model_0 (will update the new instance with updated parameters)\n",
+        "loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))\n"
+      ],
+      "metadata": {
+        "id": "AETKVhHXZbqM",
+        "outputId": "ee51aa36-426c-49ca-df77-24a7dc753bd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loaded_model_0.state_dict()"
+      ],
+      "metadata": {
+        "id": "fLFpqmSKaltP",
+        "outputId": "c252acf6-a387-4a86-9f10-da87ab61f0a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weights', tensor([0.6990])), ('bias', tensor([0.3093]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make some predictions with our loaded model\n",
+        "loaded_model_0.eval() #faster\n",
+        "\n",
+        "with torch.inference_mode():\n",
+        "  loaded_model_preds=loaded_model_0(X_test)\n",
+        "\n",
+        "loaded_model_preds"
+      ],
+      "metadata": {
+        "id": "tLm1M2ofau4_",
+        "outputId": "d5fc2147-09c9-47d3-9d7b-7ea93e82879f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.8685],\n",
+              "        [0.8825],\n",
+              "        [0.8965],\n",
+              "        [0.9105],\n",
+              "        [0.9245],\n",
+              "        [0.9384],\n",
+              "        [0.9524],\n",
+              "        [0.9664],\n",
+              "        [0.9804],\n",
+              "        [0.9944]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compare loaded model preds with original model preds\n",
+        "y_preds==loaded_model_preds"
+      ],
+      "metadata": {
+        "id": "RgTQeA0VbRs2",
+        "outputId": "8eea5750-1aaa-41fa-8630-35a5e026cc06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[False],\n",
+              "        [False],\n",
+              "        [False],\n",
+              "        [False],\n",
+              "        [False],\n",
+              "        [False],\n",
+              "        [False],\n",
+              "        [False],\n",
+              "        [False],\n",
+              "        [False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make some models preds\n",
+        "model_0.eval()\n",
+        "\n",
+        "with torch.inference_mode():\n",
+        "  y_preds=model_0(X_test)\n",
+        "\n",
+        "y_preds==loaded_model_preds"
+      ],
+      "metadata": {
+        "id": "MgKnYScibaA2",
+        "outputId": "7c6be5ff-113d-47ca-b95c-a264976fc8ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     }
   ]
 }
